added codecov in travis