@@ -98,6 +98,17 @@
 		</systemPropertyVariables>
 		</configuration>
   </plugin>
+  
+  <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>2.19</version>
+  <configuration>
+    <reuseForks>true</reuseForks>
+    <threadCount>1</threadCount>
+    <argLine>${surefireArgLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
+  </configuration>
+</plugin>
   </plugins>
   </build>
 </project>
